--- a/views/Mystery.ejs
+++ b/views/Mystery.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="genre.css">
+  <link rel="stylesheet" href="/genre.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
@@ -89,6 +89,6 @@
 
   </section>
 </body>
-<script src="main.js"></script>
+<script src="/main.js"></script>
 
 </html>
