--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <title>World Of Books</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -43,4 +43,7 @@
 </div>
 </div>
 </body>
+<script type="/main.js">
+
+</script>
 </html>
