--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -9,7 +9,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="bodySignUp">
 <section class="signUp">
@@ -43,4 +43,7 @@
 </div>
 </section>
 </body>
+<script type="/main.js">
+
+</script>
 </html>
