--- a/views/creation.ejs
+++ b/views/creation.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="create.css">
+  <link rel="stylesheet" href="/create.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -87,7 +87,7 @@
 
 
 </body>
-<script type="text/javascript" src="main.js">
+<script type="text/javascript" src="/main.js">
 
 </script>
 </section>
