--- a/public/style.css
+++ b/public/style.css
@@ -324,6 +324,7 @@ label {
 @media only screen and (max-width:1500px) {
   .rightMainSec {
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
   }
 
   .author {
