--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       </ul>
       <ul class="right">
         <li><a href="/login">Log-In</a></li>
-        <li class="signUpDir"><a href="/signUp">Sign-Up</a></li>
+        <li class="signUpDir"><a href="/signup">Sign-Up</a></li>
         <li> <a href="/profile">Profile</a> </li>
       </ul>
     </section>
