--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,7 @@ h4 {
   background-size: cover;
   background-image: url(/img/newbluepic.jpeg);
   background-position: center;
+ background-repeat: no-repeat;
 }
 
 .nav {
