--- a/public/genre.css
+++ b/public/genre.css
@@ -340,7 +340,33 @@ p {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+input{
+  margin: 30px 0 0 0;
+  height: 30px;
+  width: 60%;
+}
+form{
+  margin: 10px 0 0 0;
+  border-top: 3px solid;
+  border-color: rgba(12, 31, 47);
+  height: 80px;
+}
+.comment{
+  margin: 0 0 20px 0;
+  display: inline-block;
+}
+.Read>a {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+i{
+  color: white;
+  font-size: 1.8rem;
+}
+button{
+  background-color: rgba(2, 21, 37);
+  border-color: rgba(2, 21, 37);
+}
 li {
   margin: 10px 0 0 0;
   list-style: none;
