--- a/public/readStories.css
+++ b/public/readStories.css
@@ -21,6 +21,32 @@ a {
   grid-column: 3/4;
 }
 
+.comment {
+  grid-row: 3/5;
+  grid-column: 1/2;
+}
+
+.comment>h3 {
+  margin: 0px 0 0 5%;
+  padding: 5px 0 5px 2%;
+  border-bottom: 2px solid;
+  border-bottom-width: thick;
+  border-color: white;
+  font-weight: 600;
+  color: black;
+  font-size: 3rem;
+  height: 55px;
+  max-width: 50%;
+  grid-row: 2/5;
+  grid-column: 1/2;
+}
+.feedback{
+  border-radius: 10px;
+  margin: 0 0 40px 5%;
+  color: white;
+  background-color: rgba(2, 21, 37);
+  max-width: 40%;
+}
 a:hover {
   text-decoration: none;
   color: white;
@@ -63,7 +89,7 @@ span {
 
 p {
   max-width: 95%;
-  margin: 20px 0 15px 5%;
+  margin: 20px 3% 15px 5%;
   font-size: 2rem;
 }
 
@@ -108,12 +134,14 @@ p {
 }
 
 .story {
+  overflow-y: scroll;
   border-radius: 10px;
   margin: 0 0 40px 0;
   color: white;
   background-color: rgba(2, 21, 37);
   grid-row: 3/4;
   grid-column: 2/3;
+  height: 300px;
 }
 
 .fa, .fas {
