--- a/public/style.css
+++ b/public/style.css
@@ -101,7 +101,7 @@ h3 {
 }
 
 h4 {
-  margin: 60px 0 30px 0;
+  margin: 60px 0 10px 0;
   font-weight: 200;
   color: white;
   font-size: 2rem;
@@ -159,6 +159,7 @@ h4 {
   display: grid;
   grid-auto-rows: minmax(100px, auto);
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: : 1fr;
 }
 
 .book {
@@ -175,7 +176,7 @@ h4 {
   float: left;
   border-right: 2px solid white;
   border-left: 2px solid white;
-  border-color: rgba(2, 21, 37);
+  border-color: rgba(12, 31, 47);
   grid-column: 1/2;
   grid-row: 1/2;
 }
@@ -186,7 +187,7 @@ h4 {
   float: left;
   border-right: 2px solid white;
   border-left: 2px solid white;
-  border-color: rgba(2, 21, 37);
+  border-color: rgba(12, 31, 47);
   grid-column: 2/3;
   grid-row: 1/2;
 }
@@ -197,7 +198,7 @@ h4 {
   float: left;
   border-right: 2px solid white;
   border-left: 2px solid white;
-  border-color: rgba(2, 21, 37);
+  border-color: rgba(12, 31, 47);
   grid-column: 3/4;
   grid-row: 1/2;
 }
@@ -364,6 +365,13 @@ label {
     border-top: 2px;
     border-radius: 0%;
     height: 400px;
+    width: 40%;
+  }
+  .author>img {
+    border-color: rgba(255, 0, 0, 0.5);
+    border-top: 2px;
+    border-radius: 0%;
+    height: 400px;
   }
 
   .author2 {
@@ -371,9 +379,25 @@ label {
     border-top: 2px;
     border-radius: 0%;
     height: 400px;
+    width: 40%;
+
+  }
+  .author2>img {
+    border-color: rgba(255, 0, 0, 0.5);
+    border-top: 2px;
+    border-radius: 0%;
+    height: 400px;
   }
 
   .author3 {
+    border-color: rgba(255, 0, 0, 0.5);
+    border-top: 2px;
+    border-radius: 0%;
+    height: 400px;
+    width: 40%;
+
+  }
+  .author3>img {
     border-color: rgba(255, 0, 0, 0.5);
     border-top: 2px;
     border-radius: 0%;
