--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,10 +43,11 @@
       <% for(var i=0; i<stories.length; i++) {%>
       <%if(stories[i].postStory==true){%>
       <%if(stories[i]==stories[0]){%>
-      <section class="author"><img class="author" src="/<%= stories[0].profileImg%>" alt=""> </section>
+      <section class="author">
+        <img class="author" src="/<%= stories[0].profileImg%>" alt="">
+      </section>
       <a href="/readStories/<%= stories[0]._id %>">
         <h4><%= stories[i-0].title %></h4>
-
         <p><%= stories[i-0].stories %></p>
         <%}%>
         <%}%>
@@ -63,29 +64,25 @@
         <section class="author2"><img class="author2" src="/<%= stories[last].profileImg%>" alt=""> </section>
         <a href="/readStories/<%= stories[last]._id %>">
           <h4><%= stories[last].title %></h4>
-
           <p><%= stories[last].stories %></p>
-
           <%}%>
           <%}%>
-    </a>
+        </a>
     </section>
 
     <section class="topStories2 clearfix">
 
       <% for(var j=stories.length-1; j<stories.length; j++) {%>
-          <%if(stories[j].postStory==true){%>
+      <%if(stories[j].postStory==true){%>
 
-          <section class="author3"><img class="author3" src="/<%= stories[last-1].profileImg%>" alt=""> </section>
-          <a href="/readStories/<%= stories[last-1]._id %>">
-            <h4><%= stories[last-1].title %></h4>
-
-            <p><%= stories[last-1].stories %></p>
-            <a />
-
+      <section class="author3"><img class="author3" src="/<%= stories[last-1].profileImg%>" alt=""> </section>
+      <a href="/readStories/<%= stories[last-1]._id %>">
+        <h4><%= stories[last-1].title %></h4>
+        <p><%= stories[last-1].stories %></p>
+        <a />
+        <%}%>
             <%}%>
-            <%}%>
-      <%}%>
+        <%}%>
     </section>
 
   </section>
