--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -39,7 +39,7 @@
        <form action="/up" enctype="multipart/form-data" method="post">
          <p>Edit:</p>
           <input type="file" name="file-to-upload">
-          <input type="submit" value="Profile Picture">
+          <input type="submit" value="Insert Profile Picture">
         </form>
   </section>
   <section class="jumboTron">
@@ -73,6 +73,7 @@
     </section>
 
   </section>
+
 </body>
 <script src="/main.js"></script>
 
